--- a/dev/Project_Setup/Project_Create_Structure.ipynb
+++ b/dev/Project_Setup/Project_Create_Structure.ipynb
@@ -20,7 +20,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\dev\\Project_Setup\n"
+      "C:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\src\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dev\\Project_Setup\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\python311.zip\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\DLLs\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\Lib\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\n",
+      "\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\Lib\\site-packages\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\Lib\\site-packages\\win32\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\Lib\\site-packages\\win32\\lib\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.conda\\Lib\\site-packages\\Pythonwin\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "for x in sys.path:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dev\\Project_Setup\n"
      ]
     }
    ],
@@ -35,25 +64,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "-\"data_raw\" exists already as a folder\n",
+      "-\"data_treated\" exists already as a folder\n",
+      "-\"py_scripts\" exists already as a folder\n",
+      "-\"notebooks_models\" exists already as a folder\n",
+      "-\"notebooks_exploration_cleaning\" exists already as a folder\n",
       "\n",
       "creating files:\n",
       "\n",
       "+\".env\" was created\n",
-      "+\"__init__.py\" was created\n",
-      "+\"notebooks_models/modelData.ipynb\" was created\n",
-      "+\"py_scripts/my_Module.py\" was created\n",
-      "+\"extractData.ipynb\" was created\n",
-      "+\"copy_data_from_server.ipynb\" was created\n",
-      "+\"README.txt\" was created\n",
-      "+\"README.txt\" was created\n",
-      "+\"extracted_values.csv\" was created\n"
+      "-\"__init__.py\" already exists\n",
+      "-\"notebooks_models/modelData.ipynb\" already exists\n",
+      "-\"py_scripts/my_Module.py\" already exists\n",
+      "-\"extractData.ipynb\" already exists\n",
+      "-\"copy_data_from_server.ipynb\" already exists\n",
+      "-\"README.txt\" already exists\n",
+      "-\"README.txt\" already exists\n",
+      "-\"extracted_values.csv\" already exists\n"
      ]
     }
    ],
@@ -79,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
