--- a/dev/data/set1/Plot_Steps.ipynb
+++ b/dev/data/set1/Plot_Steps.ipynb
@@ -4,43 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\tests\\data\\set1\n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\src\n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\src\n",
-      "loading arenz_group_python\n",
-      "['c:\\\\Users\\\\gustav.wiberg\\\\Documents\\\\GitHub\\\\Python\\\\Arenz_Group_Python\\\\src\\\\arenz_group_python']\n",
-      "['c:\\\\Users\\\\gustav.wiberg\\\\Documents\\\\GitHub\\\\Python\\\\Arenz_Group_Python\\\\src\\\\arenz_group_python']\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pathlib import Path\n",
-    "import sys\n",
-    "nb_path = Path.cwd()\n",
-    "p = Path.cwd()\n",
-    "print(p)\n",
-    "for p in Path.cwd().parents:\n",
-    "    pa = p / \"src\"\n",
-    "    if pa.exists():\n",
-    "        print(pa)\n",
-    "        sys.path.insert(0,str(pa))\n",
-    "        break\n",
-    "print(pa)\n",
-    "#add\n",
-    "#sys.path.insert(0,str(pa))\n",
-    "import arenz_group_python\n",
-    "print(arenz_group_python.__path__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -53,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +45,21 @@
       "1000\n",
       "10.09899\n",
       "501\n",
-      "cc 101\n"
+      "cc 101\n",
+      "index 11\n",
+      "index 1\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 11 is out of bounds for axis 0 with size 11",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 17\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m, datas[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mindex_at_time(\u001b[38;5;241m1\u001b[39m))\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m, datas[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mindex_at_time(\u001b[38;5;241m0\u001b[39m))\n\u001b[1;32m---> 17\u001b[0m \u001b[43mdatas\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mintegrate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\Documents\\GitHub\\Python\\Arenz_Group_Python\\src\\arenz_group_python\\data_treatment\\ec_data.py:235\u001b[0m, in \u001b[0;36mEC_Data.integrate\u001b[1;34m(self, t_start, t_end, y_channel)\u001b[0m\n\u001b[0;32m    233\u001b[0m y,unit,quantity \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_channel(y_channel)\n\u001b[0;32m    234\u001b[0m array_Q \u001b[38;5;241m=\u001b[39m integrate\u001b[38;5;241m.\u001b[39mcumulative_simpson(y[idxmin:idxmax], x\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mTime[idxmin:idxmax], initial\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m--> 235\u001b[0m Charge \u001b[38;5;241m=\u001b[39m Q(\u001b[43marray_Q\u001b[49m\u001b[43m[\u001b[49m\u001b[43midxmax\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m-\u001b[39marray_Q[idxmin\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m],unit,quantity)\u001b[38;5;241m*\u001b[39mQ(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ms\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    236\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m Charge\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 11 is out of bounds for axis 0 with size 11"
      ]
     },
     {
@@ -120,12 +97,15 @@
     "print(datas[0].index_at_time(50))\n",
     "print(\"cc\",i)\n",
     "a = datas.Tafel(\"i\",\"E\",True)\n",
-    "a = datas[0].plot(\"Time\",\"E\",xscale = \"log\",yscale =\"log\")"
+    "a = datas[0].plot(\"Time\",\"E\",xscale = \"log\",yscale =\"log\")\n",
+    "print(\"index\", datas[0].index_at_time(1))\n",
+    "print(\"index\", datas[0].index_at_time(0))\n",
+    "datas[0].integrate(0,50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -166,11 +146,11 @@
     {
      "data": {
       "text/plain": [
-       "(<matplotlib.lines.Line2D at 0x1cb58717b90>,\n",
+       "(<matplotlib.lines.Line2D at 0x255296cd910>,\n",
        " <Axes: xlabel='E ( V)', ylabel='i (A)'>)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
