--- a/dev/Optimization/Cross Validation.ipynb
+++ b/dev/Optimization/Cross Validation.ipynb
@@ -46,6 +46,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "778635"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_table.size"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -71,6 +91,7 @@
     "        #GPR model\n",
     "        kernel = RBF() + WhiteKernel()\n",
     "        gpr = GaussianProcessRegressor(kernel = kernel, random_state=0, normalize_y=True).fit(x_train, y_train)\n",
+    "        gpr.score(x_train, y_train)\n",
     "        y_result.append(gpr.predict(x_test))\n",
     "\n",
     "    #Reshaping the result\n",
@@ -159,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
