--- a/dev/build_dev/build_prj copy.ipynb
+++ b/dev/build_dev/build_prj copy.ipynb
@@ -44,7 +44,7 @@
      "output_type": "stream",
      "text": [
       "Project Version 0.2.2\n",
-      "{'build-system': {'requires': ['hatchling'], 'build-backend': 'hatchling.build'}, 'project': {'name': 'Arenz_Group_Python', 'version': '0.2.1', 'dependencies': ['nptdms', 'matplotlib', 'pathlib', 'scipy', 'numpy', 'pandas', 'EC4py'], 'requires-python': '>=3.11', 'description': 'a pip-installable package with function for Arenz Group', 'readme': 'README.md', 'keywords': ['python', 'arenz group', 'tdms'], 'classifiers': ['Development Status :: 4 - Beta', 'Operating System :: OS Independent', 'Programming Language :: Python'], 'authors': [{'name': 'Gustav Wiberg', 'email': 'gustav.wiberg@unibe.ch'}], 'maintainers': [{'name': 'Gustav Wiberg', 'email': 'gustav.wiberg@unibe.ch'}], 'license': {'file': 'LICENSE'}, 'urls': {'Homepage': 'https://github.com/Guswib/Arenz_Group_Python', 'Documentation': 'https://github.com/Guswib/Arenz_Group_Python', 'Repository': 'https://github.com/Guswib/Arenz_Group_Python', 'Issues': 'https://github.com/Guswib/Arenz_Group_Python', 'Changelog': 'https://github.com/Guswib/Arenz_Group_Python'}}, 'tool': {'setuptools': {'packages': {'find': {'where': ['src']}}}}}\n"
+      "{'build-system': {'requires': ['hatchling'], 'build-backend': 'hatchling.build'}, 'project': {'name': 'Arenz_Group_Python', 'version': '0.2.2', 'dependencies': ['nptdms', 'matplotlib', 'pathlib', 'scipy', 'numpy', 'pandas', 'EC4py'], 'requires-python': '>=3.11', 'description': 'a pip-installable package with function for Arenz Group', 'readme': 'README.md', 'keywords': ['python', 'arenz group', 'tdms'], 'classifiers': ['Development Status :: 4 - Beta', 'Operating System :: OS Independent', 'Programming Language :: Python'], 'authors': [{'name': 'Gustav Wiberg', 'email': 'gustav.wiberg@unibe.ch'}], 'maintainers': [{'name': 'Gustav Wiberg', 'email': 'gustav.wiberg@unibe.ch'}], 'license': {'file': 'LICENSE'}, 'urls': {'Homepage': 'https://github.com/Guswib/Arenz_Group_Python', 'Documentation': 'https://github.com/Guswib/Arenz_Group_Python', 'Repository': 'https://github.com/Guswib/Arenz_Group_Python', 'Issues': 'https://github.com/Guswib/Arenz_Group_Python', 'Changelog': 'https://github.com/Guswib/Arenz_Group_Python'}}, 'tool': {'setuptools': {'packages': {'find': {'where': ['src']}}}}}\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,13 +99,19 @@
       "oup_python-0.2.1-py3-none-any.whl: PASSED\n",
       "Checking \n",
       "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dist\\arenz_gr\n",
+      "oup_python-0.2.2-py3-none-any.whl: PASSED\n",
+      "Checking \n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dist\\arenz_gr\n",
       "oup_python-0.1.20.tar.gz: PASSED\n",
       "Checking \n",
       "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dist\\arenz_gr\n",
       "oup_python-0.2.0.tar.gz: PASSED\n",
       "Checking \n",
       "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dist\\arenz_gr\n",
-      "oup_python-0.2.1.tar.gz: PASSED\n"
+      "oup_python-0.2.1.tar.gz: PASSED\n",
+      "Checking \n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dist\\arenz_gr\n",
+      "oup_python-0.2.2.tar.gz: PASSED\n"
      ]
     }
    ],
@@ -116,14 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UsageError: Line magic function `%twine` not found.\n"
+      "ERROR    InvalidDistribution: Cannot find file (or expand pattern): 'dist/*'   \n"
      ]
     }
    ],
