--- a/dev/build_dev/build_prj copy.ipynb
+++ b/dev/build_dev/build_prj copy.ipynb
@@ -19,8 +19,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.venv\\Scripts\\python.exe\"\n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\n"
+      "\"c:\\Users\\gustav.wiberg\\AppData\\Local\\Programs\\Python\\Python311\\python.exe\"\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\n"
      ]
     }
    ],
@@ -43,8 +43,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project Version 0.2.2\n",
-      "{'build-system': {'requires': ['hatchling'], 'build-backend': 'hatchling.build'}, 'project': {'name': 'Arenz_Group_Python', 'version': '0.2.2', 'dependencies': ['nptdms', 'matplotlib', 'pathlib', 'scipy', 'numpy', 'pandas', 'EC4py'], 'requires-python': '>=3.11', 'description': 'a pip-installable package with function for Arenz Group', 'readme': 'README.md', 'keywords': ['python', 'arenz group', 'tdms'], 'classifiers': ['Development Status :: 4 - Beta', 'Operating System :: OS Independent', 'Programming Language :: Python'], 'authors': [{'name': 'Gustav Wiberg', 'email': 'gustav.wiberg@unibe.ch'}], 'maintainers': [{'name': 'Gustav Wiberg', 'email': 'gustav.wiberg@unibe.ch'}], 'license': {'file': 'LICENSE'}, 'urls': {'Homepage': 'https://github.com/Guswib/Arenz_Group_Python', 'Documentation': 'https://github.com/Guswib/Arenz_Group_Python', 'Repository': 'https://github.com/Guswib/Arenz_Group_Python', 'Issues': 'https://github.com/Guswib/Arenz_Group_Python', 'Changelog': 'https://github.com/Guswib/Arenz_Group_Python'}}, 'tool': {'setuptools': {'packages': {'find': {'where': ['src']}}}}}\n"
+      "Project Version 0.3.1\n",
+      "{'build-system': {'requires': ['hatchling'], 'build-backend': 'hatchling.build'}, 'project': {'name': 'Arenz_Group_Python', 'version': '0.3.1', 'dependencies': ['nptdms', 'matplotlib', 'pathlib', 'scipy', 'numpy', 'pandas', 'EC4py'], 'requires-python': '>=3.11', 'description': 'a pip-installable package with function for Arenz Group', 'readme': 'README.md', 'keywords': ['python', 'arenz group', 'tdms'], 'classifiers': ['Development Status :: 4 - Beta', 'Operating System :: OS Independent', 'Programming Language :: Python'], 'authors': [{'name': 'Gustav Wiberg', 'email': 'gustav.wiberg@unibe.ch'}], 'maintainers': [{'name': 'Gustav Wiberg', 'email': 'gustav.wiberg@unibe.ch'}], 'license': {'file': 'LICENSE'}, 'urls': {'Homepage': 'https://github.com/NanoElectroCatalysis/Arenz_Group_Python', 'Documentation': 'https://github.com/NanoElectroCatalysis/Arenz_Group_Python', 'Repository': 'https://github.com/NanoElectroCatalysis/Arenz_Group_Python', 'Issues': 'https://github.com/NanoElectroCatalysis/Arenz_Group_Python', 'Changelog': 'https://github.com/NanoElectroCatalysis/Arenz_Group_Python'}}, 'tool': {'setuptools': {'packages': {'find': {'where': ['src']}}}}}\n"
      ]
     }
    ],
@@ -62,14 +62,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\.venv\\Scripts\\python.exe: No module named build\n"
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\n",
+      "* Creating isolated environment: venv+pip...\n",
+      "* Installing packages in isolated environment:\n",
+      "  - hatchling\n",
+      "* Getting build dependencies for sdist...\n",
+      "* Building sdist...\n",
+      "* Building wheel from sdist\n",
+      "* Creating isolated environment: venv+pip...\n",
+      "* Installing packages in isolated environment:\n",
+      "  - hatchling\n",
+      "* Getting build dependencies for wheel...\n",
+      "* Building wheel...\n",
+      "Successfully built arenz_group_python-0.3.1.tar.gz and arenz_group_python-0.3.1-py3-none-any.whl\n"
      ]
     }
    ],
@@ -81,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -89,29 +94,11 @@
      "output_type": "stream",
      "text": [
       "Checking \n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dist\\arenz_gr\n",
-      "oup_python-0.1.20-py3-none-any.whl: PASSED\n",
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\dist\\arenz_grou\n",
+      "p_python-0.3.1-py3-none-any.whl: PASSED\n",
       "Checking \n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dist\\arenz_gr\n",
-      "oup_python-0.2.0-py3-none-any.whl: PASSED\n",
-      "Checking \n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dist\\arenz_gr\n",
-      "oup_python-0.2.1-py3-none-any.whl: PASSED\n",
-      "Checking \n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dist\\arenz_gr\n",
-      "oup_python-0.2.2-py3-none-any.whl: PASSED\n",
-      "Checking \n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dist\\arenz_gr\n",
-      "oup_python-0.1.20.tar.gz: PASSED\n",
-      "Checking \n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dist\\arenz_gr\n",
-      "oup_python-0.2.0.tar.gz: PASSED\n",
-      "Checking \n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dist\\arenz_gr\n",
-      "oup_python-0.2.1.tar.gz: PASSED\n",
-      "Checking \n",
-      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\Python\\Arenz_Group_Python\\dist\\arenz_gr\n",
-      "oup_python-0.2.2.tar.gz: PASSED\n"
+      "c:\\Users\\gustav.wiberg\\Documents\\GitHub\\BERN\\Arenz_Group_Python\\dist\\arenz_grou\n",
+      "p_python-0.3.1.tar.gz: PASSED\n"
      ]
     }
    ],
@@ -122,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
