--- a/dev/build_dev/build_version_updated.ipynb
+++ b/dev/build_dev/build_version_updated.ipynb
@@ -16,10 +16,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: toml in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.venv\\lib\\site-packages (0.10.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Project Version 0.2.2\n",
-      "{'build-system': {'requires': ['hatchling'], 'build-backend': 'hatchling.build'}, 'project': {'name': 'Arenz_Group_Python', 'version': '0.2.2', 'dependencies': ['nptdms', 'matplotlib', 'pathlib', 'scipy', 'numpy', 'pandas', 'EC4py'], 'requires-python': '>=3.11', 'description': 'a pip-installable package with function for Arenz Group', 'readme': 'README.md', 'keywords': ['python', 'arenz group', 'tdms'], 'classifiers': ['Development Status :: 4 - Beta', 'Operating System :: OS Independent', 'Programming Language :: Python'], 'authors': [{'name': 'Gustav Wiberg', 'email': 'gustav.wiberg@unibe.ch'}], 'maintainers': [{'name': 'Gustav Wiberg', 'email': 'gustav.wiberg@unibe.ch'}], 'license': {'file': 'LICENSE'}, 'urls': {'Homepage': 'https://github.com/Guswib/Arenz_Group_Python', 'Documentation': 'https://github.com/Guswib/Arenz_Group_Python', 'Repository': 'https://github.com/Guswib/Arenz_Group_Python', 'Issues': 'https://github.com/Guswib/Arenz_Group_Python', 'Changelog': 'https://github.com/Guswib/Arenz_Group_Python'}}, 'tool': {'setuptools': {'packages': {'find': {'where': ['src']}}}}}\n"
+      "Requirement already satisfied: toml in c:\\users\\gustav.wiberg\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.10.2)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Project Version 0.3.1\n",
+      "{'build-system': {'requires': ['hatchling'], 'build-backend': 'hatchling.build'}, 'project': {'name': 'Arenz_Group_Python', 'version': '0.3.1', 'dependencies': ['nptdms', 'matplotlib', 'pathlib', 'scipy', 'numpy', 'pandas', 'EC4py'], 'requires-python': '>=3.11', 'description': 'a pip-installable package with function for Arenz Group', 'readme': 'README.md', 'keywords': ['python', 'arenz group', 'tdms'], 'classifiers': ['Development Status :: 4 - Beta', 'Operating System :: OS Independent', 'Programming Language :: Python'], 'authors': [{'name': 'Gustav Wiberg', 'email': 'gustav.wiberg@unibe.ch'}], 'maintainers': [{'name': 'Gustav Wiberg', 'email': 'gustav.wiberg@unibe.ch'}], 'license': {'file': 'LICENSE'}, 'urls': {'Homepage': 'https://github.com/NanoElectroCatalysis/Arenz_Group_Python', 'Documentation': 'https://github.com/NanoElectroCatalysis/Arenz_Group_Python', 'Repository': 'https://github.com/NanoElectroCatalysis/Arenz_Group_Python', 'Issues': 'https://github.com/NanoElectroCatalysis/Arenz_Group_Python', 'Changelog': 'https://github.com/NanoElectroCatalysis/Arenz_Group_Python'}}, 'tool': {'setuptools': {'packages': {'find': {'where': ['src']}}}}}\n"
      ]
     }
    ],
